--- a/src/main/assets/www/common/style.css
+++ b/src/main/assets/www/common/style.css
@@ -11,8 +11,17 @@ body {
     background: #FFF;
     color: black;
     font-family: "Helvetica Neue Light", Helvetica, Arial, sans-serif;
-    font-size: 18px;
-    line-height: 1.5;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+  border-bottom: 1px solid #ccc;
 }
 
 p {
